# mahsummary

./: .gitignore  README.md  makefile  pyproject.toml
docs/: docs.json  index.html  lunr.idx.json
docs/c/: output.css
docs/en/: archive.html  index.html
docs/en/dept/: 2022-W33-Agriculture,DairyDevelopment,AnimalHusbandryandFisheriesDepartment.html  2022-W33-FinanceDepartment.html  2022-W33-GeneralAdministrationDepartment.html  2022-W33-HigherandTechnicalEducationDepartment.html  2022-W33-HomeDepartment.html  2022-W33-LawandJudiciaryDepartment.html  2022-W33-MedicalEducationandDrugsDepartment.html  2022-W33-OtherBackwardBahujanWelfareDepartment.html  2022-W33-PlanningDepartment.html  2022-W33-PublicHealthDepartment.html  2022-W33-RevenueandForestDepartment.html  2022-W33-RuralDevelopmentDepartment.html  2022-W33-SchoolEducationandSportsDepartment.html  2022-W33-SkillDevelopmentandEntrepreneurshipDepartment.html  2022-W33-SocialJusticeandSpecialAssistanceDepartment.html  2022-W33-SoilandWaterConservationDepartment.html  2022-W33-UrbanDevelopmentDepartment.html  2022-W33-summary.html  2022-W34-Agriculture,DairyDevelopment,AnimalHusbandryandFisheriesDepartment.html  2022-W34-Co-operation,TextilesandMarketingDepartment.html  2022-W34-EnvironmentDepartment.html  2022-W34-FinanceDepartment.html  (+2033 more)
docs/j/: search.js
docs/mr/: archive.html  index.html
src/: delete_campaigns.txt  gen_summary.py  package-lock.json  run_campaign.py  site.yml  tailwind.config.js
src/templates/: archive.html  disclaimer.html  macros.html  summary.html  summary.md  top-level.html
(+2024 files in other folders)
