[tool.poetry]
name = "mahsummary"
version = "0.1.0"
description = "Generate summaries for GRs found at https://gr.maharashtra.gov.in"
authors = ["Mukund Deshpande <mukund@orgpedia.in>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8.1"



[tool.poetry.group.dev.dependencies]
Jinja2 = "^3.1.2"
more-itertools = "^9.1.0"
ruff = "^0.0.278"
lunr = "^0.6.2"
python-dateutil = "^2.8.2"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

